--- a/src/styles/popup.css
+++ b/src/styles/popup.css
@@ -1,12 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans&family=Roboto&display=swap");
 
-* {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-	font-family: "Courier New", Courier, monospace;
-}
-
 body {
 	background-color: #000;
 }
